# MultiAgent_Quantitative_Analysis

./: README.md  pyproject.toml
src/agents/: agents.py  crew.py  tasks.py
src/agents/tools/: financial.py  scraper.py
